ocp/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
      annotations:
        # This annotation ensures Istio sidecar injection is enabled if not already enabled via namespace label
        sidecar.istio.io/inject: "true" 
    spec:
      containers:
      - name: web-app-container
        image: davedeks/jwebmvcdb01:latest # Replace with your actual web application image
        ports:
        - containerPort: 8050 # Port your app listens on
