ocp/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jwebmvcdb01
  namespace: default
  labels:
    app: jwebmvcdb01
spec:
  type: NodePort
  selector:
    app: jwebmvcdb01
  ports:
  - protocol: TCP
    port: 8050 # Service port
    targetPort: 8050 # Container port
    name: http
