ocp/Service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
  namespace: default
spec:
  selector:
    app: web-app
  ports:
  - protocol: TCP
    port: 80 # Service port
    targetPort: 8080 # Container port
  type: ClusterIP # Use LoadBalancer or NodePort if you need external access to the web app
